# Pepsi-Robot

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.pip  README.md  requirements.txt  world.world
log/: latest_list
src/behavior_tree/: CMakeLists.txt  behavior_tree.cpp  behavior_tree.xml
src/control/: CMakeLists.txt  package.xml
src/control/launch/: control_launch.py
src/control/src/: gripper_action_client.cpp
src/my_launch_package/launch/: launch_packages.py
src/navigation/: CMakeLists.txt  package.xml
src/navigation/config/: params.yaml
src/navigation/include/navigation/: Qr_navigation_node.hpp  can_navigation_node.hpp
src/navigation/launch/: navigation_launch.py
src/navigation/src/: Qr_navigation_node.cpp  can_navigation_node.cpp
src/perception/: CMakeLists.txt  package.xml  setup.py
src/perception/launch/: perception_launch.py
src/perception/perception/: Blackband_detector.py  Blue_detector.py  White_detector.py  imagepublisher.py  pepsican_detector.py  qrcode_detector.py
src/perception/perception/weightspepsican/best/: data.pkl
src/perception/perception/weightspepsican/best/.data/: serialization_id
src/perception/perception/weightspepsican/best/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+254 more)
src/perception/src/: Blackband_detector.py  Blue_detector.py  White_detector.py
src/robot_behavior_tree/: CMakeLists.txt  behavior_tree.xml  package.xml
src/robot_behavior_tree/launch/: launch_behavior_tree.py
src/robot_behavior_tree/src/: behavior_tree.cpp  initNode.cpp
